--- a/.travis.yml
+++ b/.travis.yml
@@ -31,18 +31,9 @@ jobs:
         - mix inch
         - mix inch.report
     - stage: deploy to staging
-      script: skip
-      deploy: &heroku
-        provider: heroku
-        app: sentient-social-staging
-        api_key: $HEROKU_AUTH_TOKEN
-        on:
-          branch: master
-      run:
-        - 'mix deps.get --only prod'
-        - 'MIX_ENV=prod mix compile'
-        - 'MIX_ENV=prod mix ecto.migrate'
-        - 'brunch build --production'
-        - 'mix phx.digest'
+      # if: branch = master
+      script:
+        - git remote add gigalixir https://$GIGALIXIR_EMAIL:$GIGALIXIR_API_KEY@git.gigalixir.com/$GIGALIXIR_APP_NAME.git
+        - git push -f gigalixir HEAD:refs/heads/master
     - stage: verify staging
-      script: 'curl http://sentient-social-staging.herokuapp.com'
+      script: 'curl -f https://sentient-social-stg.gigalixirapp.com'
