--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ jobs:
       script:
         - mix inch
         - mix inch.report
-    - stage: deploy to staging
+    - stage: deploy to gigalixir
       # if: branch = master
       script:
         - git remote add gigalixir https://$GIGALIXIR_EMAIL:$GIGALIXIR_API_KEY@git.gigalixir.com/$GIGALIXIR_APP_NAME.git
         - git push -f gigalixir HEAD:refs/heads/master
-    - stage: verify staging
-      script: 'curl -f https://sentient-social-stg.gigalixirapp.com'
+    - stage: verify deployment
+      script: 'curl -f https://ss.gigalixirapp.com'
