--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -4,7 +4,7 @@
 # WARNING: you'll need the 18.2GB GitHub-compatible Docker image:
 #   act -P ubuntu-18.04=nektos/act-environments-ubuntu:18.04
 
-name: Elixir CI
+name: Build, Test, Deploy
 
 on:
   push:
@@ -121,6 +121,7 @@ jobs:
     runs-on: ubuntu-18.04
     name: Deploy to Production
     needs: [check, test]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
         with:
