--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -118,7 +118,7 @@ jobs:
         run: mix test --trace
 
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Deploy to Production
     needs: [check, test]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
