add honeycomb key to the ci workflow

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,6 +19,7 @@ env:
   PERSONAL_CONSUMER_SECRET: ${{ secrets.PERSONAL_CONSUMER_SECRET }}
   ADMIN_NAME: ${{ secrets.ADMIN_NAME }}
   ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
+  HONEYCOMB_KEY: ${{ secrets.HONEYCOMB_KEY }}
 
 jobs:
   check:
